--- a/.github/workflows/deploy-to-azure-vm.yml
+++ b/.github/workflows/deploy-to-azure-vm.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Build Next.js app
+      - name: Build React app
         run: |
           NODE_OPTIONS=--openssl-legacy-provider npm run build
 
@@ -41,7 +41,7 @@ jobs:
         with:
           host: ${{ secrets.AZURE_VM_HOST }}
           username: ${{ secrets.AZURE_VM_USERNAME }}
-          key: ${{ secrets.AZURE_VM_KEY }}
+          password: ${{ secrets.AZURE_VM_PASSWORD }}
           source: "app.zip"
           target: "C:/Users/${{ secrets.AZURE_VM_USERNAME }}/Desktop"
 
@@ -50,7 +50,7 @@ jobs:
         with:
           host: ${{ secrets.AZURE_VM_HOST }}
           username: ${{ secrets.AZURE_VM_USERNAME }}
-          key: ${{ secrets.AZURE_VM_KEY }}
+          password: ${{ secrets.AZURE_VM_PASSWORD }}
           script: |
             powershell -Command "
               Expand-Archive -Path 'C:\Users\${{ secrets.AZURE_VM_USERNAME }}\Desktop\app.zip' -DestinationPath 'C:\Deploy\App' -Force;
