--- a/.github/workflows/deploy-to-azure-vm.yml
+++ b/.github/workflows/deploy-to-azure-vm.yml
@@ -36,7 +36,7 @@ jobs:
             exit 1
           fi
 
-      - name: Upload to Windows VM
+      - name: Upload to Windows VM (No tar)
         uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.AZURE_VM_HOST }}
@@ -44,7 +44,7 @@ jobs:
           password: ${{ secrets.AZURE_VM_PASSWORD }}
           source: "app.zip"
           target: "C:/Users/${{ secrets.AZURE_VM_USERNAME }}/Desktop"
-          tar: false
+          rm: false
 
       - name: SSH into Windows VM and deploy
         uses: appleboy/ssh-action@v1.0.0
