--- a/.github/workflows/deploy-to-azure-vm.yml
+++ b/.github/workflows/deploy-to-azure-vm.yml
@@ -25,24 +25,13 @@ jobs:
         run: |
           NODE_OPTIONS=--openssl-legacy-provider npm run build
 
-      - name: Archive production build
-        run: |
-          if [ -d "build" ]; then
-            mkdir deploy
-            cp -r build public src package.json package-lock.json deploy/
-            cd deploy && zip -r ../app.zip . && cd ..
-          else
-            echo "Build failed: build directory does not exist"
-            exit 1
-          fi
-
-      - name: Upload to Windows VM (No tar)
+      - name: Upload files to Windows VM (No zip/tar, wildcard for files)
         uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.AZURE_VM_HOST }}
           username: ${{ secrets.AZURE_VM_USERNAME }}
           password: ${{ secrets.AZURE_VM_PASSWORD }}
-          source: "app.zip"
+          source: "/*"  # Wildcard to upload all files in the repository
           target: "C:/Users/${{ secrets.AZURE_VM_USERNAME }}/Desktop"
           rm: false
           strip_components: 0
@@ -55,8 +44,8 @@ jobs:
           password: ${{ secrets.AZURE_VM_PASSWORD }}
           script: |
             powershell -Command "
-              Expand-Archive -Path 'C:\Users\${{ secrets.AZURE_VM_USERNAME }}\Desktop\app.zip' -DestinationPath 'C:\Deploy\App' -Force;
-              cd 'C:\Deploy\App';
+              # Navigate to the folder where files were uploaded
+              cd 'C:\Users\${{ secrets.AZURE_VM_USERNAME }}\Desktop';
               npm install --production;
               pm2 restart myapp || pm2 start npm --name myapp -- start;
             "
