--- a/.github/workflows/deploy-to-azure-vm.yml
+++ b/.github/workflows/deploy-to-azure-vm.yml
@@ -1,4 +1,4 @@
-name: Deploy CRA App to Azure Windows VM
+name: Deploy CRA App to Azure Static Web App
 
 on:
   push:
@@ -6,9 +6,8 @@ on:
       - main
 
 jobs:
-  deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -21,40 +20,21 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Build React app
+      - name: Build the React app
         run: |
           NODE_OPTIONS=--openssl-legacy-provider npm run build
-          echo "✅ Build complete."
 
-      - name: Check if build directory exists
-        run: |
-          if [ ! -d "build" ]; then
-            echo "❌ Build folder not found. Something went wrong during build."
-            exit 1
-          fi
-
-      - name: Upload build files to Windows VM (no tar)
-        uses: appleboy/scp-action@master
+      - name: Deploy to Azure Static Web Apps
+        uses: Azure/static-web-apps-deploy@v1
         with:
-          host: ${{ secrets.AZURE_VM_HOST }}
-          username: ${{ secrets.AZURE_VM_USERNAME }}
-          password: ${{ secrets.AZURE_VM_PASSWORD }}
-          source: "build package.json package-lock.json"
-          target: "C:/Users/${{ secrets.AZURE_VM_USERNAME }}/Desktop/myapp"
-          tar_exec: ""  # Disable tar to fix Windows compatibility
-          rm: false
-          strip_components: 0
-
-      - name: SSH into Windows VM and serve app
-        uses: appleboy/ssh-action@v1.0.0
-        with:
-          host: ${{ secrets.AZURE_VM_HOST }}
-          username: ${{ secrets.AZURE_VM_USERNAME }}
-          password: ${{ secrets.AZURE_VM_PASSWORD }}
-          script: |
-            powershell -Command "
-              cd 'C:\Users\${{ secrets.AZURE_VM_USERNAME }}\Desktop\myapp';
-              npm install --production;
-              npm install -g serve;
-              pm2 restart cra-app || pm2 start serve --name cra-app -- -s build -l 3000;
-            "
+          azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          action: "upload"
+          app_location: "/"                            # Root of the repo
+          output_location: "build"                     # Output directory from npm run build
+        env:
+          DB_HOST: ${{ secrets.DB_HOST }}
+          DB_USER: ${{ secrets.DB_USER }}
+          DB_DATABASE: ${{ secrets.DB_DATABASE }}
+          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+          DB_PORT: ${{ secrets.DB_PORT }}
