--- a/.github/workflows/deploy-to-azure-vm.yml
+++ b/.github/workflows/deploy-to-azure-vm.yml
@@ -1,4 +1,4 @@
-name: Deploy CRA App to Azure Static Web App
+name: Deploy CRA App to Azure Windows VM
 
 on:
   push:
@@ -6,8 +6,9 @@ on:
       - main
 
 jobs:
-  build-and-deploy:
+  deploy:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -24,17 +25,23 @@ jobs:
         run: |
           NODE_OPTIONS=--openssl-legacy-provider npm run build
 
-      - name: Deploy to Azure Static Web Apps
-        uses: Azure/static-web-apps-deploy@v1
+      - name: Install sshpass
+        run: sudo apt-get install -y sshpass
+
+      - name: Copy build files manually using sshpass + scp
+        run: |
+          sshpass -p "${{ secrets.AZURE_VM_PASSWORD }}" scp -o StrictHostKeyChecking=no -r ./build ./package.json ./package-lock.json ${{ secrets.AZURE_VM_USERNAME }}@${{ secrets.AZURE_VM_HOST }}:"C:/Users/${{ secrets.AZURE_VM_USERNAME }}/Desktop/myapp"
+
+      - name: SSH into Windows VM and serve app
+        uses: appleboy/ssh-action@v1.0.0
         with:
-          azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          action: "upload"
-          app_location: "/"                            # Root of the repo
-          output_location: "build"                     # Output directory from npm run build
-        env:
-          DB_HOST: ${{ secrets.DB_HOST }}
-          DB_USER: ${{ secrets.DB_USER }}
-          DB_DATABASE: ${{ secrets.DB_DATABASE }}
-          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
-          DB_PORT: ${{ secrets.DB_PORT }}
+          host: ${{ secrets.AZURE_VM_HOST }}
+          username: ${{ secrets.AZURE_VM_USERNAME }}
+          password: ${{ secrets.AZURE_VM_PASSWORD }}
+          script: |
+            powershell -Command "
+              cd 'C:\Users\${{ secrets.AZURE_VM_USERNAME }}\Desktop\myapp';
+              npm install --production;
+              npm install -g serve;
+              pm2 restart cra-app || pm2 start serve --name cra-app -- -s build -l 3000;
+            "
